// Copyright 2024 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


enum NetworkconnectivityBetaHubStateEnum {
  NetworkconnectivityBetaHubStateEnumNO_VALUE_DO_NOT_USE = 0;
  NetworkconnectivityBetaHubStateEnumSTATE_UNSPECIFIED = 1;
  NetworkconnectivityBetaHubStateEnumCREATING = 2;
  NetworkconnectivityBetaHubStateEnumACTIVE = 3;
  NetworkconnectivityBetaHubStateEnumDELETING = 4;
}

message NetworkconnectivityBetaHub {
  string name = 1;
  string create_time = 2;
  string update_time = 3;
  map<string, string> labels = 4;
  string description = 5;
  string unique_id = 6;
  NetworkconnectivityBetaHubStateEnum state = 7;
  string project = 8;
  repeated NetworkconnectivityBetaHubRoutingVpcs routing_vpcs = 9;
}

message NetworkconnectivityBetaHubRoutingVpcs {
  string uri = 1;
}

message ApplyNetworkconnectivityBetaHubRequest {
  NetworkconnectivityBetaHub resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteNetworkconnectivityBetaHubRequest {
  string service_account_file = 1;
  NetworkconnectivityBetaHub resource = 2;
}

message ListNetworkconnectivityBetaHubRequest {
  string service_account_file = 1;
  string Project = 2;
}

message ListNetworkconnectivityBetaHubResponse {
  repeated NetworkconnectivityBetaHub items = 1;
}

service NetworkconnectivityBetaHubService {
  rpc ApplyNetworkconnectivityBetaHub(ApplyNetworkconnectivityBetaHubRequest) returns (NetworkconnectivityBetaHub);
  rpc DeleteNetworkconnectivityBetaHub(DeleteNetworkconnectivityBetaHubRequest) returns (google.protobuf.Empty);
  rpc ListNetworkconnectivityBetaHub(ListNetworkconnectivityBetaHubRequest) returns (ListNetworkconnectivityBetaHubResponse);
}
